@startuml

title __MAPS's Class Diagram__\n

  namespace sample.maps {
    class sample.maps.Map {
        - bombs : Vector<Bomb>
        - mapGridPane : GridPane
        - observerInterfaces : Set<MapObserver>
        - titles : Vector<Title>
        + addBombToMap()
        + addFireToMap()
        + addMapObserver()
        + addObserver()
        + addPlayerToMap()
        + getBombs()
        + getMapGridPane()
        + getTitles()
        + loadMap()
        + notifyMapObservers()
        + notifyObservers()
        + removeObserver()
        + setMapGridPane()
    }
  }
  

  namespace sample.maps {
    class sample.maps.MapObserver {
        + update()
        + update()
    }
  }
  

  namespace sample.maps {
    class sample.maps.MapReader {
        {static} + readMapFromXLSXFile()
    }
  }
  

  namespace sample.maps {
    class sample.maps.Title {
        - rectangle : Rectangle
        - x : int
        - y : int
        + Title()
        + getRectangle()
        + getTypeOfTitle()
        + getX()
        + getY()
        + setTypeOfTitle()
    }
  }
  

  namespace sample.maps {
    enum TypeOfTitle {
      BRICK
      FIRE
      FLOOR
      WALL
    }
  }
  

  sample.maps.Map .up.|> sample.interfaces.Observable
  sample.maps.MapObserver .up.|> sample.interfaces.Observer
  sample.maps.Title -up-|> javafx.scene.Node
  sample.maps.Title o-- sample.maps.TypeOfTitle : typeOfTitle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
